// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`onCond > optimize #1 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? transform(value) : false;"
`;

exports[`onCond > optimize #2 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? value : false;"
`;

exports[`onCond > optimize #3 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? v : false;"
`;

exports[`onCond > optimize #4 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? value ? 1 : 2 : false;"
`;

exports[`onCond > optimize #5 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? value.foo : false;"
`;

exports[`onCond > optimize #6 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? transform(value) : false;"
`;

exports[`onCond > optimize #7 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? transform(value.foo) : false;"
`;

exports[`onCond > optimize #8 1`] = `
"import { match } from "@monstermann/match";
value ? transform(value) : false;"
`;

exports[`onCond > optimize #9 1`] = `
"import { match } from "@monstermann/match";
value ? value : false;"
`;

exports[`onCond > optimize #10 1`] = `
"import { match } from "@monstermann/match";
value ? v : false;"
`;

exports[`onCond > optimize #11 1`] = `
"import { match } from "@monstermann/match";
value ? value ? 1 : 2 : false;"
`;

exports[`onCond > optimize #12 1`] = `
"import { match } from "@monstermann/match";
value ? value.foo : false;"
`;

exports[`onCond > optimize #13 1`] = `
"import { match } from "@monstermann/match";
value ? transform(value) : false;"
`;

exports[`onCond > optimize #14 1`] = `
"import { match } from "@monstermann/match";
value ? transform(value.foo) : false;"
`;

exports[`onCond > optimize #15 1`] = `
"import { match } from "@monstermann/match";
v ? transform(value) : false;"
`;

exports[`onCond > optimize #16 1`] = `
"import { match } from "@monstermann/match";
v ? value : false;"
`;

exports[`onCond > optimize #17 1`] = `
"import { match } from "@monstermann/match";
v ? v : false;"
`;

exports[`onCond > optimize #18 1`] = `
"import { match } from "@monstermann/match";
v ? value ? 1 : 2 : false;"
`;

exports[`onCond > optimize #19 1`] = `
"import { match } from "@monstermann/match";
v ? value.foo : false;"
`;

exports[`onCond > optimize #20 1`] = `
"import { match } from "@monstermann/match";
v ? transform(value) : false;"
`;

exports[`onCond > optimize #21 1`] = `
"import { match } from "@monstermann/match";
v ? transform(value.foo) : false;"
`;

exports[`onCond > optimize #22 1`] = `
"import { match } from "@monstermann/match";
(value ? 1 : 2) ? transform(value) : false;"
`;

exports[`onCond > optimize #23 1`] = `
"import { match } from "@monstermann/match";
(value ? 1 : 2) ? value : false;"
`;

exports[`onCond > optimize #24 1`] = `
"import { match } from "@monstermann/match";
(value ? 1 : 2) ? v : false;"
`;

exports[`onCond > optimize #25 1`] = `
"import { match } from "@monstermann/match";
(value ? 1 : 2) ? value ? 1 : 2 : false;"
`;

exports[`onCond > optimize #26 1`] = `
"import { match } from "@monstermann/match";
(value ? 1 : 2) ? value.foo : false;"
`;

exports[`onCond > optimize #27 1`] = `
"import { match } from "@monstermann/match";
(value ? 1 : 2) ? transform(value) : false;"
`;

exports[`onCond > optimize #28 1`] = `
"import { match } from "@monstermann/match";
(value ? 1 : 2) ? transform(value.foo) : false;"
`;

exports[`onCond > optimize #29 1`] = `
"import { match } from "@monstermann/match";
value.foo ? transform(value) : false;"
`;

exports[`onCond > optimize #30 1`] = `
"import { match } from "@monstermann/match";
value.foo ? value : false;"
`;

exports[`onCond > optimize #31 1`] = `
"import { match } from "@monstermann/match";
value.foo ? v : false;"
`;

exports[`onCond > optimize #32 1`] = `
"import { match } from "@monstermann/match";
value.foo ? value ? 1 : 2 : false;"
`;

exports[`onCond > optimize #33 1`] = `
"import { match } from "@monstermann/match";
value.foo ? value.foo : false;"
`;

exports[`onCond > optimize #34 1`] = `
"import { match } from "@monstermann/match";
value.foo ? transform(value) : false;"
`;

exports[`onCond > optimize #35 1`] = `
"import { match } from "@monstermann/match";
value.foo ? transform(value.foo) : false;"
`;

exports[`onCond > optimize #36 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? transform(value) : false;"
`;

exports[`onCond > optimize #37 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? value : false;"
`;

exports[`onCond > optimize #38 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? v : false;"
`;

exports[`onCond > optimize #39 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? value ? 1 : 2 : false;"
`;

exports[`onCond > optimize #40 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? value.foo : false;"
`;

exports[`onCond > optimize #41 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? transform(value) : false;"
`;

exports[`onCond > optimize #42 1`] = `
"import { match } from "@monstermann/match";
transform(value) ? transform(value.foo) : false;"
`;

exports[`onCond > optimize #43 1`] = `
"import { match } from "@monstermann/match";
transform(value.foo) ? transform(value) : false;"
`;

exports[`onCond > optimize #44 1`] = `
"import { match } from "@monstermann/match";
transform(value.foo) ? value : false;"
`;

exports[`onCond > optimize #45 1`] = `
"import { match } from "@monstermann/match";
transform(value.foo) ? v : false;"
`;

exports[`onCond > optimize #46 1`] = `
"import { match } from "@monstermann/match";
transform(value.foo) ? value ? 1 : 2 : false;"
`;

exports[`onCond > optimize #47 1`] = `
"import { match } from "@monstermann/match";
transform(value.foo) ? value.foo : false;"
`;

exports[`onCond > optimize #48 1`] = `
"import { match } from "@monstermann/match";
transform(value.foo) ? transform(value) : false;"
`;

exports[`onCond > optimize #49 1`] = `
"import { match } from "@monstermann/match";
transform(value.foo) ? transform(value.foo) : false;"
`;

exports[`onCond > optimize #50 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #51 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? value : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #52 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? v : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #53 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? _value ? 1 : 2 : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #54 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? _value.foo : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #55 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #56 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? transform(_value.foo) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #57 1`] = `
"import { match } from "@monstermann/match";
(_value => value ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #58 1`] = `
"import { match } from "@monstermann/match";
value ? value : false;"
`;

exports[`onCond > optimize #59 1`] = `
"import { match } from "@monstermann/match";
value ? v : false;"
`;

exports[`onCond > optimize #60 1`] = `
"import { match } from "@monstermann/match";
(_value => value ? _value ? 1 : 2 : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #61 1`] = `
"import { match } from "@monstermann/match";
value ? a : false;"
`;

exports[`onCond > optimize #62 1`] = `
"import { match } from "@monstermann/match";
(_value => value ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #63 1`] = `
"import { match } from "@monstermann/match";
value ? transform(a) : false;"
`;

exports[`onCond > optimize #64 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #65 1`] = `
"import { match } from "@monstermann/match";
v ? value : false;"
`;

exports[`onCond > optimize #66 1`] = `
"import { match } from "@monstermann/match";
v ? v : false;"
`;

exports[`onCond > optimize #67 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? _value ? 1 : 2 : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #68 1`] = `
"import { match } from "@monstermann/match";
v ? a : false;"
`;

exports[`onCond > optimize #69 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #70 1`] = `
"import { match } from "@monstermann/match";
v ? transform(a) : false;"
`;

exports[`onCond > optimize #71 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #72 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? value : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #73 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? v : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #74 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? _value ? 1 : 2 : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #75 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? _value.foo : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #76 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #77 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? transform(_value.foo) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #78 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #79 1`] = `
"import { match } from "@monstermann/match";
a ? value : false;"
`;

exports[`onCond > optimize #80 1`] = `
"import { match } from "@monstermann/match";
a ? v : false;"
`;

exports[`onCond > optimize #81 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? _value ? 1 : 2 : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #82 1`] = `
"import { match } from "@monstermann/match";
a ? a : false;"
`;

exports[`onCond > optimize #83 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #84 1`] = `
"import { match } from "@monstermann/match";
a ? transform(a) : false;"
`;

exports[`onCond > optimize #85 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #86 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? value : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #87 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? v : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #88 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? _value ? 1 : 2 : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #89 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? _value.foo : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #90 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #91 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? transform(_value.foo) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #92 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #93 1`] = `
"import { match } from "@monstermann/match";
transform(a) ? value : false;"
`;

exports[`onCond > optimize #94 1`] = `
"import { match } from "@monstermann/match";
transform(a) ? v : false;"
`;

exports[`onCond > optimize #95 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? _value ? 1 : 2 : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #96 1`] = `
"import { match } from "@monstermann/match";
transform(a) ? a : false;"
`;

exports[`onCond > optimize #97 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? transform(_value) : false)({
  foo: a,
  bar: b
});"
`;

exports[`onCond > optimize #98 1`] = `
"import { match } from "@monstermann/match";
transform(a) ? transform(a) : false;"
`;

exports[`onCond > optimize #99 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #100 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? value : false)(getValue());"
`;

exports[`onCond > optimize #101 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? v : false)(getValue());"
`;

exports[`onCond > optimize #102 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? _value ? 1 : 2 : false)(getValue());"
`;

exports[`onCond > optimize #103 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? _value.foo : false)(getValue());"
`;

exports[`onCond > optimize #104 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #105 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? transform(_value.foo) : false)(getValue());"
`;

exports[`onCond > optimize #106 1`] = `
"import { match } from "@monstermann/match";
(_value => value ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #107 1`] = `
"import { match } from "@monstermann/match";
value ? value : false;"
`;

exports[`onCond > optimize #108 1`] = `
"import { match } from "@monstermann/match";
(_value => value ? v : false)(getValue());"
`;

exports[`onCond > optimize #109 1`] = `
"import { match } from "@monstermann/match";
(_value => value ? _value ? 1 : 2 : false)(getValue());"
`;

exports[`onCond > optimize #110 1`] = `
"import { match } from "@monstermann/match";
(_value => value ? _value.foo : false)(getValue());"
`;

exports[`onCond > optimize #111 1`] = `
"import { match } from "@monstermann/match";
(_value => value ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #112 1`] = `
"import { match } from "@monstermann/match";
(_value => value ? transform(_value.foo) : false)(getValue());"
`;

exports[`onCond > optimize #113 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #114 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? value : false)(getValue());"
`;

exports[`onCond > optimize #115 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? v : false)(getValue());"
`;

exports[`onCond > optimize #116 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? _value ? 1 : 2 : false)(getValue());"
`;

exports[`onCond > optimize #117 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? _value.foo : false)(getValue());"
`;

exports[`onCond > optimize #118 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #119 1`] = `
"import { match } from "@monstermann/match";
(_value => v ? transform(_value.foo) : false)(getValue());"
`;

exports[`onCond > optimize #120 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #121 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? value : false)(getValue());"
`;

exports[`onCond > optimize #122 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? v : false)(getValue());"
`;

exports[`onCond > optimize #123 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? _value ? 1 : 2 : false)(getValue());"
`;

exports[`onCond > optimize #124 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? _value.foo : false)(getValue());"
`;

exports[`onCond > optimize #125 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #126 1`] = `
"import { match } from "@monstermann/match";
(_value => (_value ? 1 : 2) ? transform(_value.foo) : false)(getValue());"
`;

exports[`onCond > optimize #127 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #128 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? value : false)(getValue());"
`;

exports[`onCond > optimize #129 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? v : false)(getValue());"
`;

exports[`onCond > optimize #130 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? _value ? 1 : 2 : false)(getValue());"
`;

exports[`onCond > optimize #131 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? _value.foo : false)(getValue());"
`;

exports[`onCond > optimize #132 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #133 1`] = `
"import { match } from "@monstermann/match";
(_value => _value.foo ? transform(_value.foo) : false)(getValue());"
`;

exports[`onCond > optimize #134 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #135 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? value : false)(getValue());"
`;

exports[`onCond > optimize #136 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? v : false)(getValue());"
`;

exports[`onCond > optimize #137 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? _value ? 1 : 2 : false)(getValue());"
`;

exports[`onCond > optimize #138 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? _value.foo : false)(getValue());"
`;

exports[`onCond > optimize #139 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #140 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value) ? transform(_value.foo) : false)(getValue());"
`;

exports[`onCond > optimize #141 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #142 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? value : false)(getValue());"
`;

exports[`onCond > optimize #143 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? v : false)(getValue());"
`;

exports[`onCond > optimize #144 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? _value ? 1 : 2 : false)(getValue());"
`;

exports[`onCond > optimize #145 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? _value.foo : false)(getValue());"
`;

exports[`onCond > optimize #146 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? transform(_value) : false)(getValue());"
`;

exports[`onCond > optimize #147 1`] = `
"import { match } from "@monstermann/match";
(_value => transform(_value.foo) ? transform(_value.foo) : false)(getValue());"
`;
